# geomk

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
api/: index.html  request.js
diagrams/: conceptual.drawio  execution.drawio  implementation.drawio  implementation_2.drawio  sequential.drawio
src/: args.rs  auth.rs  database.rs  errors.rs  filter.rs  handlers.rs  main.rs  map_data.rs  model.rs  osm_api.rs  pipe.rs  routers.rs  routes.rs
src/controllers/: controllers.rs
src/errors/: errors.rs
src/models/: map_data.rs
src/routers/: routers.rs
src/services/: database.rs  filter.rs  osm_api.rs  pipe.rs
src/static/: index.html  map.js  request.js
static/: index.html  login.html  map.html  map.js  profile.html  profile.js  redirect.js  request.js  signup.html  style.css  userManagement.js
tests/: quick_dev.rs
