[package]
name = "hw1"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
reqwest = "0.11.22"
serde = { version = "1.0.190", features = ["serde_derive", "derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
